--- a/code/soln/chap23soln.ipynb
+++ b/code/soln/chap23soln.ipynb
@@ -328,9 +328,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45 102.67621633303261 meter\n",
-      "CPU times: user 111 ms, sys: 838 µs, total: 112 ms\n",
-      "Wall time: 105 ms\n"
+      "45 102.67621633303261 meter\n"
      ]
     },
     {
@@ -351,7 +349,7 @@
     }
    ],
    "source": [
-    "%time range_func(45, params)"
+    "range_func(45, params)"
    ]
   },
   {
@@ -419,7 +417,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saving figure to file figs/chap10-fig03.pdf\n"
+      "Saving figure to file figs/chap23-fig01.pdf\n"
      ]
     },
     {
@@ -442,14 +440,14 @@
     "         title='Range as a function of launch angle',\n",
     "         legend=False)\n",
     "\n",
-    "savefig('figs/chap10-fig03.pdf')"
+    "savefig('figs/chap23-fig01.pdf')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use `maximize_golden` to search for the peak efficiently."
+    "We can use `maximize` to search for the peak efficiently."
    ]
   },
   {
@@ -480,15 +478,65 @@
       "41.65371854587384 degree 103.41492192196334 meter\n",
       "41.71970091510101 degree 103.41500757170726 meter\n",
       "41.73527723955511 degree 103.41499793513337 meter\n",
-      "41.710074217168575 degree 103.41500782026304 meter\n",
-      "CPU times: user 1.83 s, sys: 42 ms, total: 1.87 s\n",
-      "Wall time: 1.82 s\n"
+      "41.710074217168575 degree 103.41500782026304 meter\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>values</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>success</th>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>x</th>\n",
+       "      <td>41.710074217168575 degree</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fun</th>\n",
+       "      <td>103.41500782026304 meter</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "success                         True\n",
+       "x          41.710074217168575 degree\n",
+       "fun         103.41500782026304 meter\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "bounds = [0, 90] * degree\n",
-    "%time res = maximize_golden(range_func, bounds, params)"
+    "res = maximize(range_func, bounds, params)"
    ]
   },
   {
@@ -625,9 +673,9 @@
    "source": [
     "### Under the hood\n",
     "\n",
-    "Read the source code for `maximize_golden` and `minimize_scalar`, below.\n",
+    "Read the source code for `maximize` and `minimize_scalar`, below.\n",
     "\n",
-    "Add a print statement to `range_func` that prints `angle`.  Then run `maximize_golden` again so you can see how many times it calls `range_func` and what the arguments are."
+    "Add a print statement to `range_func` that prints `angle`.  Then run `maximize` again so you can see how many times it calls `range_func` and what the arguments are."
    ]
   },
   {
@@ -662,7 +710,7 @@
     }
    ],
    "source": [
-    "source_code(maximize_golden)"
+    "source_code(maximize)"
    ]
   },
   {
@@ -864,7 +912,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now use `maximize_golden` to find the optimal angle.  Is it higher or lower than the angle that maximizes range?"
+    "Now use `maximize` to find the optimal angle.  Is it higher or lower than the angle that maximizes range?"
    ]
   },
   {
@@ -929,7 +977,7 @@
     "# Solution\n",
     "\n",
     "bounds = [0, 90] * degree\n",
-    "res = maximize_golden(height_func, bounds, params)"
+    "res = maximize(height_func, bounds, params)"
    ]
   },
   {
@@ -1005,7 +1053,7 @@
     "\n",
     "Even though we are finding the \"minimum\" velocity, we are not really solving a minimization problem.  Rather, we want to find the velocity that makes the height at the wall exactly 11 m, given given that it's launched at the optimal angle.  And that's a job for `root_bisect`.\n",
     "\n",
-    "Write an error function that takes a velocity and a `Params` object as parameters.  It should use `maximize_golden` to find the highest possible height of the ball at the wall, for the given velocity.  Then it should return the difference between that optimal height and 11 meters."
+    "Write an error function that takes a velocity and a `Params` object as parameters.  It should use `maximize` to find the highest possible height of the ball at the wall, for the given velocity.  Then it should return the difference between that optimal height and 11 meters."
    ]
   },
   {
@@ -1027,7 +1075,7 @@
     "    print(velocity)\n",
     "    params = Params(params, velocity=velocity)\n",
     "    bounds = [0, 90] * degree\n",
-    "    res = maximize_golden(height_func, bounds, params)\n",
+    "    res = maximize(height_func, bounds, params)\n",
     "    return res.fun - 11*m"
    ]
   },
